--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js" integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
-       const socket = io('http://localhost:8080');
+       //const socket = io('http://localhost:8080');
+       const socket = io('https://node-socketio-chat-tx85.onrender.com');
        const myForm = document.querySelector('#myForm');
        const myMessages = document.querySelector('#myMessages');
        const txtMessage = document.querySelector('#txtMessage');
